<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/drawer_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>
	
	<FrameLayout 
		android:id="@+id/content_frame"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		>

		<RelativeLayout
		    android:id="@+id/TotalRowRelativeLayout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
		    android:background="@color/white"
		    >
		
		    <TextView
		        android:id="@+id/totalExpenseTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:text="@string/total_expense"
		        android:layout_alignParentTop="true"
		        android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
		
		    <TextView
		        android:id="@+id/totalExpenseQuantityTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:layout_alignTop="@+id/totalExpenseTextView"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceLarge"
		        />
		    
		</RelativeLayout>

			     <ListView
	     	android:id="@+id/contentListView"
	     	android:layout_width="match_parent"
	     	android:layout_height="wrap_content"
	     	/>
	</FrameLayout>

	<LinearLayout
		android:id="@+id/linearLayoutDrawer"
		android:layout_width="300dp"
		android:layout_height="match_parent"
		android:layout_gravity="start"
		android:divider="@android:color/transparent"
		android:dividerHeight="0dp"
		android:background="@color/white"
		android:orientation="vertical"
		>
	    <EditText
	        android:id="@+id/addNewExpenseEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="numberDecimal"
	        android:hint="@string/add_new_expense_hint"
	        android:textColor="@color/black"
	        />
	
	    <Button
	        android:id="@+id/addNewExpenseButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/add_new_expense_button"
	        android:textColor="@color/black"
	        />
	
        <CheckBox
	        android:id="@+id/addNewExpenseButtonCheckBox"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@color/black"
	        android:text="@string/add_new_expense_checkbox"
	        />

		</LinearLayout>
	
</android.support.v4.widget.DrawerLayout>