<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/expenseScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:id="@+id/expenseRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/between_groups_margin"
        >
        <!-- Date -->
        <LinearLayout
        	android:id="@+id/dateLinearLayout"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical"
        	android:background="@color/white"
        	>
        	
        	<TextView
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/date_title"
        		android:textColor="@color/black"
                android:textSize="@dimen/drawer_text_title_size"
        		/>
        	<DatePicker
	            android:id="@+id/datePicker"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:calendarViewShown="false"
	            android:spinnersShown= "true"
            />
        </LinearLayout>
        
        <!-- Time -->
        <LinearLayout
        	android:id="@+id/timeLinearLayout"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_below="@+id/dateLinearLayout"
        	android:layout_alignLeft="@+id/dateLinearLayout"
        	android:layout_alignRight="@+id/dateLinearLayout"
        	android:orientation="horizontal"
        	android:background="@color/white"
        	android:layout_marginTop="@dimen/between_groups_margin"
        	>
        	<TextView
        		android:id="@+id/timeTextView"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/time_title"
        		android:textColor="@color/black"
                android:textSize="@dimen/drawer_text_title_size"
        		/>
	        <Button
	            android:id="@+id/timeButton"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="09:12"
	            android:textColor="@color/black"
	            android:textSize="@dimen/drawer_text_size"
	            android:background="@color/white"
	            />
	            <TimePicker
                        android:id="@+id/timePicker"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        />
	        
        </LinearLayout>

        <!-- Quantity -->
        <LinearLayout
            android:id="@+id/quantityLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timeLinearLayout"
            android:layout_alignLeft="@+id/dateLinearLayout"
            android:layout_alignRight="@+id/dateLinearLayout"
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_marginTop="@dimen/between_groups_margin"
            >
	        <TextView
                android:id="@+id/quantityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_title"
                android:textColor="@color/black"
                android:textSize="@dimen/drawer_text_title_size"
                />
	        <EditText
                android:id="@+id/quantityEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="34.56"
                android:textColor="@color/black"
                android:textSize="@dimen/drawer_text_size"
                android:background="@color/white"
                android:inputType="numberDecimal"
                android:singleLine="true"
                />
        </LinearLayout>
        
        <!-- Comment -->
        <LinearLayout
            android:id="@+id/commentLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quantityLinearLayout"
            android:layout_alignLeft="@+id/dateLinearLayout"
            android:layout_alignRight="@+id/dateLinearLayout"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_marginTop="@dimen/between_groups_margin"
            >
            <TextView
                android:id="@+id/commentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment_title"
                android:textColor="@color/black"
                android:textSize="@dimen/drawer_text_title_size"
                />
            <EditText
                android:id="@+id/commentEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="this is a very very long comment"
                android:textColor="@color/black"
                android:textSize="@dimen/drawer_text_size"
                android:background="@color/white"
                android:inputType="textMultiLine"
                android:maxLines="3"
                />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>